fixed login not showing up whoops

--- a/resources/js/client/components/Page/Page.css
+++ b/resources/js/client/components/Page/Page.css
@@ -2,3 +2,7 @@
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
+
+.page-content > * > p > a {
+    text-decoration: underline;
+}
